--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     
     <!-- 按鈕導向其他網站 -->
     <div>
-      <button onclick="window.location.href='https://otherwebsite1.com'">網站一</button>
-      <button onclick="window.location.href='https://otherwebsite2.com'">網站二</button>
+      <button onclick="window.location.href='https://otherwebsite1.com'">郁蓁地雷王</button>
+      <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
     </div>
   </div>
 </body>
