--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <!-- 按鈕導向其他網站 -->
     <div>
-      <button onclick="window.location.href='https://otherwebsite1.com'">郁蓁地雷王</button>
+      <button onclick="window.location.href='https://cody0620.github.io/my-react-app/'">郁蓁地雷王</button>
       <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
     </div>
   </div>
