--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
+  <link rel="icon" type="image/png" href="logo.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>郁蓁歡樂世界</title>
@@ -26,7 +27,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>歡迎來郁蓁歡樂世界</h1>
+    <h1>歡迎來到郁蓁歡樂世界</h1>
     
     <!-- 音樂播放 -->
     <audio controls>
@@ -42,6 +43,8 @@
     <!-- 按鈕導向其他網站 -->
     <div>
       <button onclick="window.location.href='https://cody0620.github.io/my-react-app/'">郁蓁地雷王</button>
+      <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
+      <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
       <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
     </div>
   </div>
