--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <!-- 顯示圖片 -->
     <div>
-      <img src="QQ2.jpg" alt="睡蓁" style="max-width:100%; height:auto;">
+      <img src="QQ2.png" alt="睡蓁" style="max-width:100%; height:auto;">
     </div>
     
     <!-- 按鈕導向其他網站 -->
