--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- 按鈕導向其他網站 -->
     <div>
       <button onclick="window.location.href='https://cody0620.github.io/my-react-app/'">郁蓁地雷王</button>
-      <button onclick="window.location.href='https://otherwebsite2.com'">郁蓁二輪傳說</button>
+      <button onclick="window.location.href='https://cody0620.github.io/scootergame/'">郁蓁二輪傳說</button>
       <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
       <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
     </div>
