--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>郁蓁線上娛樂城</title>
+  <title>郁蓁遊戲科學練腦實驗室</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -27,7 +27,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>歡迎來到郁蓁線上娛樂城</h1>
+    <h1>歡迎來到郁蓁遊戲科學練腦實驗室</h1>
     
     <!-- 音樂播放 -->
 <audio id="myAudio" autoplay muted>
@@ -45,14 +45,14 @@
 </script>
     <!-- 顯示圖片 -->
     <div>
-      <img src="QQ2.png" alt="睡蓁" style="max-width:100%; height:auto;">
+      <img src="QQ3.png" alt="睡蓁" style="max-width:100%; height:auto;">
     </div>
     
     <!-- 按鈕導向其他網站 -->
     <div>
       <button onclick="window.location.href='https://cody0620.github.io/my-react-app/'">郁蓁地雷王</button>
       <button onclick="window.location.href='https://cody0620.github.io/scootergame/'">郁蓁二輪傳說</button>
-      <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
+      <button onclick="window.location.href='https://otherwebsite2.com'">Stroop</button>
       <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
     </div>
   </div>
