--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div>
       <button onclick="window.location.href='https://cody0620.github.io/my-react-app/'">郁蓁地雷王</button>
       <button onclick="window.location.href='https://cody0620.github.io/scootergame/'">郁蓁二輪傳說</button>
-      <button onclick="window.location.href='https://otherwebsite2.com'">Stroop</button>
+      <button onclick="window.location.href='https://cody0620.github.io/stroop-test-multiple-mode/'">Stroop</button>
       <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
     </div>
   </div>
