--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <button onclick="window.location.href='https://cody0620.github.io/my-react-app/'">郁蓁地雷王</button>
       <button onclick="window.location.href='https://cody0620.github.io/scootergame/'">郁蓁二輪傳說</button>
       <button onclick="window.location.href='https://cody0620.github.io/stroop-test-multiple-mode/'">Stroop</button>
-      <button onclick="window.location.href='https://otherwebsite2.com'">開發中</button>
+      <button onclick="window.location.href='https://cody0620.github.io/Japanese/'">50音練習網站</button>
     </div>
   </div>
 </body>
